Development Portal (2020-02-11 shi)
==============================
Update css for transaction, budget and planned disbursement tables


Development Portal (2020-02-10 shi)
==============================
Display transaction charts
Display legend
Import chartist css
Update css for charts and legends
Display budget and planned disbursement charts
Update colours for charts
Update result table
Add line break to currency in charts
Add all legends


Development Portal (2020-02-09 shi)
==============================
Fix sector icons for freetext search dropdown
Update new SAVi elements css and layout
Display first narratives
Update css for links and activity dates
Display humanitarian for transactions
Clean up new SAVi css
Display @budget-not-provided
Update result section


Development Portal (2020-02-08 shi)
==============================
Add crs-add
Display crs-add elements
Update css for new elements
Removed text bracket from crs channel-code
Fix whitespace crs loan status
Display all elements under transaction
Display withdrawn status
Update ref link for participating-org
Display crs for participating-org


Development Portal (2020-02-07 shi)
==============================
Update FAQ about narratives
Add wrappers for remaining elements
Display country-budget-items
Display other identifier
Display description for sector vocab
Update css for new SAVi
Display sector vocab url
Update sector layout and headers
Add chunks for empty description and percantage
Display recipient region vocab and description
Display capital spend
Update country-budget-items
Display conditions and legacy data


Development Portal (2020-02-06 shi)
==============================
Update contact-info
Update comments
Add tag to new SAVi
Update css
Add related-activity
Add activity-status
Add json chunk for activity-status-back
Update json chunk with different colours


Development Portal (2020-02-05 shi)
==============================
Add contact-info and policy-marker new SAVi

