@@ -148,13 +148,14 @@ span.doc_rec	{background-color:rgba(22,24,37,0.6);}
 .wrap_contact_info					{width:980px; margin:0 0 20px -50px; padding:20px 40px 0 40px; font-size:16px; line-height:1.5em; background-color:rgba(17,46,105,0.9);}
 .wrap_contact_info:last-of-type 	{padding-bottom:30px;}
 .wrap_contact_info:nth-of-type(1) 	{padding-top:30px; width:900px; margin-left:-10px;}
-.wrap_contact_info .contact_info	{padding-bottom:10px;}
-.wrap_contact_info .contact_info:last-of-type	{padding-bottom:20px;}
+.wrap_contact_info .contact_info	{padding-bottom:15px; border-bottom:1px dotted #7481aa; margin-bottom:15px;}
+.wrap_contact_info .contact_info:last-of-type	{padding-bottom:20px; border:0; margin-bottom:0;}
 .wrap_contact_org					{font-weight:bold;}
 .wrap_contact_name					{font-size:20px; padding-top:10px;}
 .wrap_contact_title					{font-style:italic;}
-.wrap_contact_tel					{font-size:18px; padding-top:5px;}
-.wrap_contact_type					{font-size:12px; text-transform:uppercase; padding-bottom:10px;}
+.wrap_contact_tel					{font-size:18px; padding:5px 0;}
+.wrap_contact_type					{font-size:12px; text-transform:uppercase; padding-bottom:5px; color:#ccc;}
+.wrap_contact_add					{padding-top:5px;}
 
 /*	DATES	*/
 .wrap_activity_date					{position:relative; width:980px; height:82px; margin-left:-50px;}
@@ -202,7 +203,7 @@ table.budget th	{padding-bottom:10px; border-bottom:1px solid #aaa; margin-botto
 table.budget th.value	{background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right -5px center, #1c252fe8;}
 
 table.budget th:hover	{cursor:pointer;}
-table.budget td			{font-size:14px; color:#FFF; line-height:1.35em; vertical-align:top; border-bottom:1px solid #333642; padding:10px 0;}
+table.budget td			{font-size:14px; color:#FFF; line-height:1.35em; vertical-align:top; border-bottom:1px solid #4d5264; padding:10px 0;}
 table.budget td.value	{font-size:16px; padding-right:20px; text-align:right;}
 .org table.budget td.value			{font-size:14px;}
 
@@ -324,7 +325,7 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 
 /*	IATI ACTIVITY RESULT TABLE	*/
 .wrap_result th.result_indi,
-.wrap_result td.result_indi					{width:350px; padding-right:40px;}
+.wrap_result td.result_indi					{width:375px; padding-right:40px;}
 .wrap_result td.result_base,
 .wrap_result td.result_target,
 .wrap_result td.result_actual				{font-size:14px;}
@@ -332,10 +333,21 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .wrap_result td.result_target div,
 .wrap_result td.result_actual div			{border-bottom:1px dotted #666;}
 .wrap_result th.result_period,
-.wrap_result td.result_period				{width:155px;}
+.wrap_result td.result_period				{width:150px;}
 .wrap_result td.result_period				{font-size:12px;}
 .result_indicator							{}
+.result_indi_desc							{padding-top:10px; font-size:13px; line-height:15px;}
 .result_period_time							{background-color:#253860; min-height:25px; line-height:25px; margin-bottom:5px; padding-left:10px; max-width:155px;}
+.result_indicator .wrap_document			{margin:10px 0 0 0;}
+.result_indicator .header_doc				{display:none;}
+.result_indicator a.doc_link				{padding:5px; font-size:8px; line-height:1em;}
+.result_indicator .wrap_doc_link			{position:relative; margin-left:20px; display:block; padding:0; margin-top:-15px;}
+.result_indicator span.doc_title			{font-size:12px; max-width:203px;}
+.result_indicator span.doc_format			{font-size:9px; max-width:100px; margin-left:0; position:absolute; top:0; right:0; padding:2px 5px 5px 5px;}
+.result_indicator span.doc_cat,
+.result_indicator span.doc_rec,
+.result_indicator span.doc_date				{font-size:11px;}
+
 
 /*	IATI ACTIVITY POLICY MARKER TABLE	*/
 .wrap_policy_marker table.budget th.policy_code,
@@ -387,11 +399,17 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .wrap_crs_add th.crs_sig,
 .wrap_crs_add td.crs_sig	{width:160px; padding-right:20px;}
 
+/*	Thinner tables rows for better legibility	*/
+.wrap_participating_org table.budget td,
+.wrap_humanitarian_scope table.budget td,
+.wrap_locaiton table.budget td	{padding:5px 0;}
+
+
 /*	DEFAULTS MODALITIES	*/
 table.modals					{table-layout:fixed; border-collapse:collapse; width:100%;}
 table.modals td,
 table.modals th 				{text-align:left; font-size:12px; padding:5px 10px 5px 5px; vertical-align:top; width:100px;}
-table.modals th					{font-size:10px; color:#ccc; text-transform:uppercase; font-weight:normal; border-bottom:1px solid #666;}
+table.modals th					{font-size:10px; color:#ccc; text-transform:uppercase; font-weight:normal; border-bottom:1px solid #4d5264;}
 table.modals td.mod_1,
 table.modals th.mod_1			{width:120px;}
 table.modals td.mod_2,
@@ -406,14 +424,14 @@ table.modals td span.withdrawn	{display:inline-block; background-color:#545e73; 
 
 /*	Chartist SVG	 */
 .showchart,
-.showcharts		{margin:0 auto; width:920px; height:240px; padding:10px 0 0 0; margin:0 0 30px -20px;}
+.showcharts		{margin:0 auto; width:920px; height:240px; padding:10px 0 0 0; margin:0 0 30px -35px;}
 .ct-chart-line	{overflow:visible;}
 
 /*	Chart Legends	*/
 .wrap_legend	{text-align:center; margin:0 auto;}
-.legend			{font-size:10px; text-transform:uppercase; color:#ccc; text-align:center; padding-top:10px;}
+.legend			{font-size:10px; text-transform:uppercase; color:#eee; text-align:center; padding-top:10px;}
 .legend span	{display:inline-block; vertical-align:baseline; width:8px; height:8px; border-radius:4px; margin-right:5px;}
-.wrap_legend .legend	{display:inline-block; vertical-align:top; margin-right:15px; padding-top:5px;}
+.wrap_legend .legend	{display:inline-block; vertical-align:top; margin-right:10px; margin-left:10px; padding-top:5px;}
 
 .legend.chart_1	span	{background-color:#0099ff;}		/*	Incoming Funds	*/
 .legend.chart_2	span	{background-color:#ff8176;}		/*	Outgoing Commitment	*/
@@ -421,15 +439,15 @@ table.modals td span.withdrawn	{display:inline-block; background-color:#545e73; 
 .legend.chart_4	span	{background-color:#fed00f;}		/*	Expenditure	*/
 .legend.chart_5	span	{background-color:#dea3ff;}		/*	Interest Payment	*/
 .legend.chart_6	span	{background-color:#c446e1;}		/*	Loan Repayment	*/
-.legend.chart_7	span	{background-color:#00a301;}		/*	Reimbursement	*/
+.legend.chart_7	span	{background-color:#65e17a;}		/*	Reimbursement	*/
 .legend.chart_8	span	{background-color:#c59e8c;}		/*	Purchase of Equity	*/
 .legend.chart_9	span	{background-color:#8f496a;}		/*	Sale of Equity	*/
 .legend.chart_10 span	{background-color:#ff6cec;}		/*	Credit Guarantee	*/
 .legend.chart_11 span	{background-color:#cf291c;}		/*	Incoming Commitment	*/
 .legend.chart_12 span	{background-color:#82e1ff;}		/*	Outgoing Pledge	*/
 .legend.chart_13 span	{background-color:#0062a3;}		/*	Incoming Pledge	*/
-.legend.chart_14 span	{background-color:#65e17a;}		/*	Planned Disbursement	*/
-.legend.chart_15 span	{background-color:#ccc;}		/*	Budget	*/
+.legend.chart_14 span	{background-color:#00a301;}		/*	Planned Disbursement	*/
+.legend.chart_15 span	{background-color:#666;}		/*	Budget	*/
 
 /*	CHART OPTIONS	*/
 .ct-label	{fill:#fff; color:#fff; font-size:11px; line-height:12px;}
@@ -492,7 +510,7 @@ table.modals td span.withdrawn	{display:inline-block; background-color:#545e73; 
 .chart-line-transaction-6 .ct-line	{stroke:#c446e1;}		/*	Loan Repayment	*/
 .chart-line-transaction-6 .ct-area	{fill:transparent;}
 .chart-line-transaction-7 .ct-point,
-.chart-line-transaction-7 .ct-line	{stroke:#00a301;}		/*	Reimbursement	*/
+.chart-line-transaction-7 .ct-line	{stroke:#65e17a;}		/*	Reimbursement	*/
 .chart-line-transaction-7 .ct-area	{fill:transparent;}
 .chart-line-transaction-8 .ct-point,
 .chart-line-transaction-8 .ct-line	{stroke:#c59e8c;}		/*	Purchase of Equity	*/
@@ -513,11 +531,11 @@ table.modals td span.withdrawn	{display:inline-block; background-color:#545e73; 
 .chart-line-transaction-13 .ct-line	{stroke:#0062a3;}		/*	Incoming Pledge	*/
 .chart-line-transaction-13 .ct-area	{fill:transparent;}
 .chart-line-planned-disbursement .ct-point,
-.chart-line-planned-disbursement .ct-line	{stroke:#65e17a;}		/*	Planned Disbursement	*/
-.chart-line-planned-disbursement .ct-area	{fill:#65e17a;}
+.chart-line-planned-disbursement .ct-line	{stroke:#00a301;}		/*	Planned Disbursement	*/
+.chart-line-planned-disbursement .ct-area	{fill:#207721; fill-opacity:0.3}
 .chart-line-budget .ct-point,
-.chart-line-budget .ct-line			{stroke:#ccc;}			/*	Budget	*/
-.chart-line-budget .ct-area			{fill:#999;}
+.chart-line-budget .ct-line			{stroke:#888;}			/*	Budget	*/
+.chart-line-budget .ct-area			{fill:#666;}
 
 /*	Default Chartist stylings	*/
 .ct-chart-line .ct-label,
